# sone

./: README.md  package-lock.json  package.json  tailwind.config.js
data/: io.github.lullabyX.sone.desktop  io.github.lullabyX.sone.metainfo.xml
scripts/: gen_embedded.py
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  embedded_lastfm.rs  embedded_librefm.rs  error.rs  lib.rs  tidal_api.rs
src-tauri/src/commands/: pages.rs  playback.rs  scrobble.rs  utility.rs
src-tauri/src/scrobble/: lastfm.rs  librefm.rs  listenbrainz.rs  mod.rs  musicbrainz.rs
src/api/: tidal.ts
src/atoms/: playback.ts  proxy.ts
src/components/: AddToPlaylistMenu.tsx  AlbumView.tsx  AppInitializer.tsx  ArtistPage.tsx  ArtistTracksPage.tsx  BioText.tsx  CardScrollSection.tsx  ExplorePage.tsx  ExploreSubPage.tsx  FavoritesView.tsx  Header.tsx  Home.tsx  HomeSection.tsx  Layout.tsx  LibraryViewAll.tsx  Login.tsx  MediaCard.tsx  MediaContextMenu.tsx  MediaGrid.tsx  MixPage.tsx  NowPlayingDrawer.tsx  PageSkeleton.tsx  PlayerBar.tsx  PlaylistView.tsx  ScrobbleModal.tsx  SearchBar.tsx  SearchView.tsx  Sidebar.tsx  ThemeEditor.tsx  TidalImage.tsx  TrackContextMenu.tsx  TrackList.tsx  TrackRadioPage.tsx  UserMenu.tsx  ViewAllPage.tsx
src/contexts/: AudioContext.tsx  ToastContext.tsx
src/hooks/: useAudio.ts  useAuth.ts  useDrawer.ts  useFavorites.ts  useInfiniteScroll.ts  useMediaPlay.ts  useNavigation.ts  usePlaybackActions.ts  usePlaylists.ts
src/lib/: qid.ts  theme.ts
src/utils/: itemHelpers.ts
