[package]
name = "sone"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon"] }
image = "0.25"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gstreamer = "0.23"
walkdir = "2"
id3 = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.21"
dirs = "5"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-oauth = "=2.0.0"
rand = "0.10.0"
sha2 = "0.10.9"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
tauri-plugin-global-shortcut = "2"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "=2.0.1"
